; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libedit/extr_eln.c_el_parse.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libedit/extr_eln.c_el_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @el_parse(%struct.TYPE_4__* %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32**, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i8**, i8*** %7, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = call i64 @ct_decode_argv(i32 %10, i8** %11, i32* %13)
  %15 = inttoptr i64 %14 to i8*
  %16 = bitcast i8* %15 to i32**
  store i32** %16, i32*** %9, align 8
  %17 = load i32**, i32*** %9, align 8
  %18 = icmp ne i32** %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %28

20:                                               ; preds = %3
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32**, i32*** %9, align 8
  %24 = call i32 @el_wparse(%struct.TYPE_4__* %21, i32 %22, i32** %23)
  store i32 %24, i32* %8, align 4
  %25 = load i32**, i32*** %9, align 8
  %26 = call i32 @el_free(i32** %25)
  %27 = load i32, i32* %8, align 4
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %20, %19
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i64 @ct_decode_argv(i32, i8**, i32*) #1

declare dso_local i32 @el_wparse(%struct.TYPE_4__*, i32, i32**) #1

declare dso_local i32 @el_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
